--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
+    <color name="main_color">#FF3333</color>
     <color name="menu_background">#0E192A</color>
-    <color name="border_color">#F67280</color>
-    <color name="main_color">#ff3333</color>
 </resources>
